[gd_scene load_steps=7 format=3 uid="uid://ck6hme0uj2nuu"]

[ext_resource type="Script" uid="uid://db48vr1ct4fys" path="res://source/editor/interfaces/countries/country_edit.gd" id="1_ecsip"]
[ext_resource type="StyleBox" uid="uid://bmln1elnj0h8" path="res://resources/style_blueish.tres" id="2_ijejh"]
[ext_resource type="PackedScene" uid="uid://dv5h7wj8mri2l" path="res://source/ui/country_icon.tscn" id="3_lo1lb"]
[ext_resource type="PackedScene" uid="uid://cintikjibl1vr" path="res://source/utils/property_tree/nodes/item_void.tscn" id="4_agddt"]
[ext_resource type="Script" uid="uid://dvo2mdraodovy" path="res://source/utils/property_tree/items/property_tree_item.gd" id="5_4kgdt"]

[sub_resource type="Resource" id="Resource_ecsip"]
script = ExtResource("5_4kgdt")
text = "Settings:"
metadata/_custom_type_script = "uid://dvo2mdraodovy"

[node name="InterfaceCountryEdit" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ecsip")

[node name="BackButton" type="Button" parent="."]
custom_minimum_size = Vector2(96, 32)
layout_mode = 1
offset_right = 64.0
offset_bottom = 32.0
theme_override_styles/normal = ExtResource("2_ijejh")
text = "<- Back"

[node name="DeleteButton" type="Button" parent="."]
custom_minimum_size = Vector2(48, 48)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.15
anchor_right = 0.5
anchor_bottom = 0.15
offset_left = 256.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = ExtResource("2_ijejh")
text = "Delete"

[node name="Control" type="Control" parent="."]
custom_minimum_size = Vector2(128, 128)
layout_mode = 1
anchor_left = 0.5
anchor_top = 0.15
anchor_right = 0.5
anchor_bottom = 0.15
offset_left = -64.0
offset_top = -64.0
offset_right = 64.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2

[node name="CountryIcon" parent="Control" instance=ExtResource("3_lo1lb")]
unique_name_in_owner = true
layout_mode = 1
anchor_left = 0.0
anchor_top = 0.19879518
anchor_right = 1.0
anchor_bottom = 0.8012048

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.3
anchor_right = 1.0
anchor_bottom = 0.85
grow_horizontal = 2
grow_vertical = 2

[node name="Settings" parent="VBoxContainer" instance=ExtResource("4_agddt")]
unique_name_in_owner = true
layout_mode = 2
item = SubResource("Resource_ecsip")

[node name="ShortcutsLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.85
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_font_sizes/font_size = 12
text = "Keyboard shortcuts:
Del -> Delete
Ctrl+D -> Duplicate"
vertical_alignment = 2

[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="DeleteButton" to="." method="_on_delete_button_pressed"]
